explore markdown features

--- a/blog/2022-11-19-markdown-features.mdx
+++ b/blog/2022-11-19-markdown-features.mdx
@@ -7,7 +7,7 @@ slug: /my-custom-url
 
 ## Markdown heading
 
-Markdown text with [links](./hello.md)
+Markdown text with [links](./2021-02-28-greetings.md)
 
 ```jsx title="src/components/HelloDocusaurus.js"
 function HelloDocusaurus() {
